Fix visibility of file list
ERM29005

[4.2.x]

--- a/resources/attachments.css
+++ b/resources/attachments.css
@@ -38,6 +38,10 @@
 	height: auto;
 }
 
+.ve-activated .attachments-filelist > ul {
+	visibility: visible;
+}
+
 /* stylelint-disable declaration-no-important */
 .attachments-filelist .oojsplus-data-gridWidget-table .oojsplus-data-gridWidget-header th.oojsplus-data-gridWidget-cell {
 	border-bottom: 1px solid #a5a5a5;
